--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "tiny-npm-deploy",
+  "name": "@dadc/tnd",
   "version": "1.0.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "bin": "dist/index.js",
   "main": "index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "author": "Danny Arnold <danny@dannyarnold.com>",
-  "license": "SEE LICENSE IN <private>",
+  "license": "MIT",
   "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.7",
     "@types/express": "^4.17.21",
-    "express": "^4.18.2",
     "typescript": "^5.3.3"
   }
 }
